--- a/index.html
+++ b/index.html
@@ -159,8 +159,10 @@ else
                 <div class="col-md-3 text-center">
                     <div class="single_service wow fadeInUp" data-wow-delay="4s">
                         <i class="icon-magnifying-glass"></i>
-                        <h2>Teste sua Internet</h2>
-                        <p><div align="center"> <iframe name="Teste de Velocidade da Internet" height="100" width="100" scrolling="no" frameborder="0" longdesc="http://www.minhaconexao.com.br/mini-velocimetro/description.txt" src="http://www.minhaconexao.com.br/mini-velocimetro/velocimetro.php?model=2&width=160&height=160"></iframe><br /><font size="2" face="Arial"><a href="http://www.minhaconexao.com.br" rel="nofollow" target="_blank" style="text-decoration:none"><b> Teste sua Internet</b></a></font></div></p>
+                        <h2>Satisfação</h2>
+                        <p>
+                        Uma empresa fundamentada em uma nescesseidade local. Buscando contribuir para o nosso desenvolvimento tecnológico.
+                        </p>
                     </div>
                 </div>
             </div>            
