atualização de planos

--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-br">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sou Net</title>
+    <title>SpeedSul</title>
     <!-- Google Font -->
-    <link href='http://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700,800' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-
+    <link href="http://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700,800" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <!-- Font Awesome -->
 
 
@@ -74,6 +72,7 @@ else
 
 
     <header id="HOME" style="background-position: 50% -125px;">
+    <section>
 	        <div class="section_overlay">
 	            <nav class="navbar navbar-default navbar-fixed-top">
 	              <div class="container">
@@ -106,7 +105,7 @@ else
 	                <div class="row">
 	                    <div class="col-md-12 text-center">
 	                        <div class="home_text wow fadeInUp animated">
-	                            <h2>Inovação tecnológica</h2>
+	                            <h2>Provedor de Internet Banda Larga</h2>
 	                            <p>Conectando voçê ao mundo.</p>
 	                            <img src="layout/strey/images/shape.png" alt="">                        
 	                        </div>
@@ -134,35 +133,24 @@ else
             <div class="row">
                 <div class="col-md-3 text-center">
                     <div class="single_service wow fadeInUp" data-wow-delay="1s">
-                        <i class="icon-pencil"></i>
-                        <h2>Inovação</h2>
-                        <p>Trazendo o melhor da tecnologia para voçê.</p>
-<!-- BEGIN BLOCK_BATEPAPO -->
-<li><a href="../chat/" title="Bate-papo" target="_blank" onClick="window.open(this.href, this.target,'width=740,height=480,scrollbars=NO'); return false;"> Bate-Papo </a></li> 
-<!-- END BLOCK_BATEPAPO -->
+                           <img src="layout/strey/images/plano-1-mb.png" alt="">
+
                     </div>
                 </div>
                 <div class="col-md-3 text-center">
                     <div class="single_service wow fadeInUp" data-wow-delay="2s">
-                        <i class="icon-gears"></i>
-                        <h2>Rápides</h2>
-                        <p>Buncando metodos ágeis de suporte, implantação e atendimento.</p>
+                        <img src="layout/strey/images/plano-2-mb.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-3 text-center">
                     <div class="single_service wow fadeInUp" data-wow-delay="3s">
-                        <i class="icon-camera"></i>
-                        <h2>Qualidade</h2>
-                        <p>Uma empresa que se procupa com a qualidade e satisfação de nossos clientes.</p>
-                    </div>
+                       <img src="layout/strey/images/plano-4-mb.png" alt="">
+                       </div>
                 </div>
                 <div class="col-md-3 text-center">
                     <div class="single_service wow fadeInUp" data-wow-delay="4s">
-                        <i class="icon-magnifying-glass"></i>
-                        <h2>Satisfação</h2>
-                        <p>
-                        Uma empresa fundamentada em uma nescesseidade local. Buscando contribuir para o nosso desenvolvimento tecnológico.
-                        </p>
+                       
+                        <img src="layout/strey/images/plano-6-mb.png" alt="">
                     </div>
                 </div>
             </div>            
@@ -173,7 +161,7 @@ else
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="about_title">
-                        <h2>About Me</h2>
+                        <h2>Empresa</h2>
                         <img src="layout/strey/images/shape.png" alt="">
 <!-- BEGIN BLOCK_TIPOIMG -->
 <!-- END BLOCK_TIPOIMG -->
@@ -221,8 +209,10 @@ else
                 </div>
                 <div class="col-md-4  wow fadeInRight animated">
                     <p class="about_us_p">
+                    <img src="layout/strey/images/plano-10-mb.png" alt="">
 <!-- BEGIN BLOCK_NOTICIAS -->
 <!-- BEGIN BLOCK_DADOSNOTICIAS -->
+
 <li class="link"><a href="noticia.php?id={NOTICIAID}" title="{NOTICIATITULO}">{NOTICIATITULO}</a></li>
 <!-- END BLOCK_DADOSNOTICIAS -->
 <!-- END BLOCK_NOTICIAS -->
@@ -388,21 +378,21 @@ else
 <!-- BEGIN BLOCK_HLINKS -->       
 <!-- BEGIN BLOCK_DADOSLINKS -->
 <li>
-<img src="imagens/img_row.gif" align="top"> <a href="links.php?id={LINKID}" target="{LINKDESTINO}">{LINKNOME}</a> 
+<img src="imagens/img_row.gif" align="top" alt="Link"> <a href="links.php?id={LINKID}" target="{LINKDESTINO}">{LINKNOME}</a> 
 </li>
 <!-- END BLOCK_DADOSLINKS -->
 <!-- END BLOCK_HLINKS --> 
 
 <!-- BEGIN BLOCK_TWITTER -->
 TWITTER
-<a href="http://twitter.com/{ENDTWITTER}" target="_blank"> <img src="imagens/twitter.jpg" title="Siga no twitter" border="0"></a>            
+<a href="http://twitter.com/{ENDTWITTER}" target="_blank"> <img src="imagens/twitter.jpg" title="Siga no twitter" border="0" alt="twitter"></a>            
 <!-- END BLOCK_TWITTER --> 
 <li class="divider"></li>
 
 <!-- BEGIN BLOCK_PAGINAS -->
 <!-- BEGIN BLOCK_DADOSPAGINAS --> 
 
-<li><img src="imagens/img_row.gif" align="top"> <a href="pagina.php?id={PAGINAID}" title="{PAGINANOME}">{PAGINANOME}</a></li>
+<li><img src="imagens/img_row.gif" align="top" alt="pagina nome"> <a href="pagina.php?id={PAGINAID}" title="{PAGINANOME}">{PAGINANOME}</a></li>
 <!-- END BLOCK_DADOSPAGINAS -->
 <!-- END BLOCK_PAGINAS --> 
                         </p>
@@ -520,11 +510,12 @@ TWITTER
                     <div class="social">
                         <h2>Follow Me on Here</h2>
                         <ul class="icon_list">
-                            <li><a href="http://www.facebook.com/abdullah.noman99"target="_blank"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="http://www.twitter.com/absconderm"target="_blank"><i class="fa fa-twitter"></i></a></li>
+    <li><a href="http://www.facebook.com/abdullah.noman99" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="http://www.twitter.com/absconderm" target="_blank"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                             <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                            <li><a href="http://www.dribbble.com/abdullahnoman"target="_blank"><i class="fa fa-dribbble"></i></a></li>
+                            <li><a href="http://www.dribbble.com/abdullahnoman" target="_blank">
+                            <i class="fa fa-dribbble"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -534,13 +525,19 @@ TWITTER
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="copyright_text   wow fadeInUp animated">
-<p>&copy; brandy 2015.All Right Reserved By <a href="http://www.themeforest.net/user/thecodecafe"target="_blank">Code Cafe Team</a></p>
+<p>&copy; brandy 2015.All Right Reserved By 
+<a href="http://www.speedsul.com" target="_blank"> Code Cafe Team </a>
+
+</p>
                         <p> 
 <!-- BEGIN BLOCK_ANATEL -->
 <hr>
 <img src="imagens/anatel.jpg" alt="Anatel" class="center">
 <!-- END BLOCK_ANATEL -->
                 </p>
+                <!-- BEGIN BLOCK_BATEPAPO -->
+<li><a href="../chat/" title="Bate-papo" target="_blank" onClick="window.open(this.href, this.target,'width=740,height=480,scrollbars=NO'); return false;"> Bate-Papo </a></li> 
+<!-- END BLOCK_BATEPAPO -->
                     </div>
                 </div>
             </div>
