Atualização de formulario de cadastro

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@ else
 	                    <li><a href="#ABOUT">Sobre</a></li>
 	                    <li><a href="#TESTIMONIAL">Empresa</a></li>
 	                    <li><a href="#WORK">Serviços</a></li>
+                         <li><a href="cadastro.php">Cadastro</a></li>
 	                    <li><a href="#CONTACT">Contato</a></li>
 	                  </ul>
 	                </div><!-- /.navbar-collapse -->
